Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>VTSC: Visual Transition State Clustering by BerkeleyAutomation</title>
+    <title>TSC-DL: Transition State Clustering with Deep Learning by BerkeleyAutomation</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -16,13 +16,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">VTSC: Visual Transition State Clustering</h1>
+        <h1 class="header">TSC-DL: Transition State Clustering with Deep Learning</h1>
         <p class="header">Unsupervised Task Segmentation from Multi-Modal Data</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/BerkeleyAutomation/vtsc/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/BerkeleyAutomation/vtsc/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/BerkeleyAutomation/vtsc">View On GitHub</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/BerkeleyAutomation/tsc-dl/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/BerkeleyAutomation/tsc-dl/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/BerkeleyAutomation/tsc-dl">View On GitHub</a></li>
         </ul>
 
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/BerkeleyAutomation">BerkeleyAutomation</a></p>
