added the isrr papers in refs

--- a/index.html
+++ b/index.html
@@ -54,22 +54,28 @@
 
 <ul>
 <li> 
-<strong>TSC-DL: Unsupervised Trajectory Segmentation of Multi-Modal Surgical Demonstrations with Deep Learning,</strong> <br>
-Adithyavairavan Murali*, Animesh Garg*, Sanjay Krishnan*, Florian T. Pokorny, Pieter Abbeel, Trevor Darrell, Ken Goldberg (* denotes equal contribution). Under Review, ICRA 2016 [<a href="files/mgk-icra16-tscdl-submitted.pdf"> <strong>PDF</strong> </a>] </li>
+<a href="files/mgk-icra16-tscdl-submitted.pdf">TSC-DL: Unsupervised Trajectory Segmentation of Multi-Modal Surgical Demonstrations with Deep Learning.</a> 
+Adithyavairavan Murali*, Animesh Garg*, Sanjay Krishnan*, Florian T. Pokorny, Pieter Abbeel, Trevor Darrell, Ken Goldberg (* denotes equal contribution).<br>
+<em> Under Review, ICRA 2016 </em> </li>
+
+<li><a href="http://www.cs.berkeley.edu/~animesh.garg/files/ISRR2015_Krishnan-Garg_TSC.pdf">Transition State Clustering: Unsupervised Surgical Trajectory Segmentation For Robot Learning.</a>
+Sanjay Krishnan*, Animesh Garg*, Sachin Patil, Colin Lea, Greg Hager, Pieter Abbeel, Ken Goldberg (* denotes equal contribution).<br>
+<em>International Symposium on Robotics Research (ISRR), 2015.</em> </li>
+
 </ul>
 
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-<p><a href="http://adithyamurali.com">Adithya Murali</a>, <a href="http://animeshgarg.com">Animesh Garg</a>, <a href="https://www.ocf.berkeley.edu/~sanjayk/">Sanjay Krishnan</a>, <a href="http://www.csc.kth.se/~fpokorny/">Florian Pokorny</a><br>
-PIs: Ken Goldberg, Trevor Darrell, Pieter Abbeel
+<p><a href="http://animeshgarg.com">Animesh Garg</a>, <a href="https://www.ocf.berkeley.edu/~sanjayk/">Sanjay Krishnan</a>, <a href="http://adithyamurali.com">Adithya Murali</a>,  <a href="http://www.csc.kth.se/~fpokorny/">Florian Pokorny</a><br>
+PIs: <a href="goldberg.berkeley.edu">Ken Goldberg</a>, <a href="http://www.cs.berkeley.edu/~trevor/">Trevor Darrell</a>, <a href="http://www.cs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>
 </p>
 
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Please Contact <a href="goldberg.berkeley.edu">Prof. Ken Goldberg</a>, Director of Automation Sciences Lab at <a href="mailto:goldberg@berkeley.edu">goldberg@berkeley.edu</a></p>
+<p>Please Contact <a href="http://animeshgarg.com">Animesh Garg</a> at <a href="mailto:aniesh.garg@berkeley.edu">animesh.garg@berkeley.edu</a></p>
 
 <hr>
       </section>
