Update acceptance notification

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <li> 
 <a href="files/mgk-icra16-tscdl-submitted.pdf">TSC-DL: Unsupervised Trajectory Segmentation of Multi-Modal Surgical Demonstrations with Deep Learning.</a> 
 Adithyavairavan Murali*, Animesh Garg*, Sanjay Krishnan*, Florian T. Pokorny, Pieter Abbeel, Trevor Darrell, Ken Goldberg (* denotes equal contribution).<br>
-<em> Under Review, ICRA 2016 </em> </li>
+<em> Accepted for publication at ICRA 2016 </em> </li>
 
 <li><a href="http://www.cs.berkeley.edu/~animesh.garg/files/ISRR2015_Krishnan-Garg_TSC.pdf">Transition State Clustering: Unsupervised Surgical Trajectory Segmentation For Robot Learning.</a>
 Sanjay Krishnan*, Animesh Garg*, Sachin Patil, Colin Lea, Greg Hager, Pieter Abbeel, Ken Goldberg (* denotes equal contribution).<br>
