--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <ul>
 <li> 
-<a href="files/mgk-icra16-tscdl-submitted.pdf">TSC-DL: Unsupervised Trajectory Segmentation of Multi-Modal Surgical Demonstrations with Deep Learning.</a> 
+<a href="files/mgk-icra16-tscdl.pdf">TSC-DL: Unsupervised Trajectory Segmentation of Multi-Modal Surgical Demonstrations with Deep Learning.</a> 
 Adithyavairavan Murali*, Animesh Garg*, Sanjay Krishnan*, Florian T. Pokorny, Pieter Abbeel, Trevor Darrell, Ken Goldberg (* denotes equal contribution).<br>
 <em> Accepted for publication at ICRA 2016 </em> </li>
 
@@ -82,7 +82,7 @@ PIs: <a href="goldberg.berkeley.edu">Ken Goldberg</a>, <a href="http://www.cs.be
       <footer>      
       <p><small>      
       <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png"></a><br>
-      Interchangeable Surgical Tools by <a href="automation.berkeley.edu">Automation Lab</a> is licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+      TSC-DL by <a href="automation.berkeley.edu">Automation Lab</a> is licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
       </small></p>        
       </footer>
     </div>
