added the nips workshop paper

--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
 <li> 
 <a href="files/mgk-icra16-tscdl.pdf">TSC-DL: Unsupervised Trajectory Segmentation of Multi-Modal Surgical Demonstrations with Deep Learning.</a> 
 Adithyavairavan Murali*, Animesh Garg*, Sanjay Krishnan*, Florian T. Pokorny, Pieter Abbeel, Trevor Darrell, Ken Goldberg (* denotes equal contribution).<br>
-<em> Accepted for publication at ICRA 2016 </em> </li>
+<em> IEEE International Conference on Robotics and Automation, (ICRA) 2016 </em> </li>
+
+<li> 
+<a href="files/gkm-wk_nips15-tsc.pdf"> On Visual Feature Representations for Transition State Learning in Robotic Task Demonstrations.</a> 
+Animesh Garg*, Sanjay Krishnan*, Adithyavairavan Murali, Florian T. Pokorny, Pieter Abbeel, Trevor Darrell, Ken Goldberg (* denotes equal contribution).<br>
+<em> <a href="http://www.feature-extraction.org/accepted-papers"> NIPS 2015 Workshop on Feature Extraction 2015</a>. </em> </li>
+
 
 <li><a href="http://www.cs.berkeley.edu/~animesh.garg/files/ISRR2015_Krishnan-Garg_TSC.pdf">Transition State Clustering: Unsupervised Surgical Trajectory Segmentation For Robot Learning.</a>
 Sanjay Krishnan*, Animesh Garg*, Sachin Patil, Colin Lea, Greg Hager, Pieter Abbeel, Ken Goldberg (* denotes equal contribution).<br>
